<resources>
    <string name="app_name">SimpleCoil Edited by Marius</string>

    //placeholder strings
    <string name="integer" translatable="false">%d</string>
    //weapon connect state strings
    <string name="reconnect_weapon_button">Reconnect Same Weapon Only</string>
    <string name="connect_weapon_button">Connect Weapon</string>
    <string name="connect_qr_weapon_button">Connect Weapon Using QR</string>
    <string name="disconnect_weapon_button">Disconnect Weapon</string>
    <string name="pistol_detected_toast">Pistol Detected! (%1$s)</string>
    <string name="rifle_detected_toast">Rifle Detected! (%1$s)</string>
    <string name="grenade_paired_toast">Grenade Paired!</string>
    <string name="blaster_disconnected_dialog">Blaster Disconnected! Trying to reconnect&#8230;</string>
    <string name="blaster_disconnected_cancel_quit">Cancel &amp; Quit</string>
    <string name="connect_status_not_connected">Not Connected</string>
    <string name="connect_status_scanning">Scanning&#8230;</string>
    <string name="connect_status_connecting">Connecting&#8230;</string>
    <string name="connect_status_communicating">Communicating&#8230;</string>
    //Game strings
    <string name="start_game_button">Start</string>
    <string name="end_game_button">End</string>
    //Team strings
    <string name="team_label">TEAM</string>
    <string name="team_number_label">TEAM %1$d</string>
    <string name="no_team">No Team</string>
    //player data
    <string name="eliminations_count_label">ELIMINATIONS</string>
    <string name="lives_count_label">LIVES</string>
    <string name="shots_remaining_label">SHOTS (%1$d, %2$d)</string>
    <string name="shot_mode_label">MODE</string>
    <string name="shot_mode_single">Single</string>
    <string name="shot_mode_burst3">Burst(3)</string>
    <string name="shot_mode_auto">Auto</string>
    <string name="recoil_label" translatable="false">RECOIL</string>
    <string name="recoil_enabled">On</string>
    <string name="recoil_disabled">Off</string>
    <string name="score_label">SCORE</string>
    <string name="team_score_label">TEAM</string>
    <string name="score_limit_label">SCORE (%1$d)</string>
    <string name="team_score_limit_label">TEAM (%1$d)</string>
    <string name="health_label">HEALTH (%1$d)</string>
    //Weapon presets strings
    <string name="weapon_preset_sniper">Sniper</string>
    <string name="weapon_preset_shotgun">Shotgun</string>
    <string name="weapon_preset_carbine">Carbine</string>
    <string name="weapon_preset_lmg">LMG</string>
    <string name="weapon_preset_pistol">Pistol</string>
    <string name="weapon_preset_mp">MP</string>
    <string name="weapon_preset_button">Weapon Preset</string>
    <string name="weapon_preset_none">None</string>
    //Player preset Strings
    <string name="player_preset_juggernaut">Juggernaut</string>
    <string name="player_preset_recon">Recon</string>
    <string name="player_preset_tank">Tank</string>
    <string name="player_preset_medic">Medic</string>
    <string name="player_preset_none">None</string>
    <string name="player_preset_button">Player Preset</string>

    //Weapon fire mode strings
    <string name="firing_mode_outdoor_no_cone">Outdoor No Cone</string>
    <string name="firing_mode_outdoor_with_cone">Outdoor With Cone</string>
    <string name="firing_mode_indoor_no_cone">Indoor No Cone</string>
    <string name="firing_mode_cone_toast">The cone is a wide angle, short range IR blaster that allows you to hit opponents without aiming in a 30ft/10m range.</string>


    <string name="starting_game_label">STARTING!</string>
    <string name="eliminated_label">ELIMINATED!</string>
    <string name="spawn_in_label">Spawn in %1$d</string>
    //Ble Strings
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="error_location_permission_required">Location permission required for Bluetooth scanning.</string>

    <string name="error_select_team">Select a team first!</string>
    <string name="error_same_id">Two players are using the same ID!</string>
    <string name="error_udp_version">Network client version mismatch. Please update the app!</string>
    <string name="error_no_wifi">Wi-Fi must be connected!</string>
    <string name="error_join">Unable to find server lobby!</string>
    <string name="error_server_cancel">Server was canceled!</string>
    <string name="error_limit_too_high">Limit is too high!</string>
    <string name="dialog_game_time_expired">Time limit reached!</string>
    <string name="dialog_out_of_lives">Out of lives!</string>

    <string name="end_game_dialog_title">End Game?</string>
    <string name="end_game_dialog_message">Are you sure you want to stop playing?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="server_status_serving_on">Serving on %1$s</string>
    <string name="server_status_connected_to">Connected to %1$s</string>
    <string name="server_status_searching">Searching for server&#8230;</string>

    <string name="use_network_button">Enable Networking</string>
    <string name="network_menu_button">Network Options</string>
    <string name="no_network_button">Disable Network</string>
    <string name="ready_button">Join Lobby</string>
    <string name="join_button">Join Lobby</string>
    <string name="not_ready_button">Leave Lobby</string>
    <string name="leave_button">Leave Lobby</string>
    <string name="create_server_button">Create Lobby</string>
    <string name="cancel_server_button">Cancel Lobby</string>
    <string name="join_ip_button">Join IP&#8230;</string>
    <string name="player_name_button">Player Name: %1$s</string>
    <string name="game_mode_toggle_button">Set Game Mode</string>
    <string name="game_mode_label">Game Mode</string>
    <string name="game_mode_ffa">Free For All</string>
    <string name="game_mode_2teams">2 Teams</string>
    <string name="game_mode_4teams">4 Teams</string>
    <string name="scan_players_button">Search For Players</string>
    <string name="scan_started_toast">Player scan started!</string>
    <string name="network_player_1count">1 Player</string>
    <string name="network_player_count">%1$d Players</string>
    <string name="not_enough_players_toast">Not enough players!</string>
    <string name="network_team">Player %1$d</string>
    <string name="player_name">Player Name:</string>
    <string name="server_ip">Server IP:</string>
    <string name="game_limit_button">Game Limit</string>

    <string name="serverip">Serving on 999.999.999</string>
    <string name="scrollview_info">"This is an edit of the original Simplecoil App made by me, I hope you like it\n\nSimpleCoil is provided free with the hope that it will be useful. SimpleCoil comes with no warranty and may damage your hardware./n/n
    SimpleCoil is intended to be used with RECOIL laser tag toys and cannot be used without the appropriate accessories. This app does not need a Wi-Fi connection or hub to be used. Some of the advanced features that you may be used to with the first-party app are not available here. However, this simple app will not experience any connection issues and should run well on older, slower devices.
/n/nTap the power button to toggle recoil. Tap the thumb/rear/talk button to switch firing modes.
/n/nPlayers that are on the same team cannot shoot each other - no friendly fire.
/n/nThe network support does not require the use of the official hub, but will work with the official hub. Instead of using a server, clients will attempt to find and connect to each other directly over the same Wi-Fi network."</string>

    <string name="game_limit_title">Set Game Limit (0 for unlimited):</string>
    <string name="game_limit_time">Time in minutes</string>
    <string name="game_limit_lives">Lives</string>
    <string name="game_limit_score">Score</string>

    <string name="please_wait">Please Wait</string>

    <string name="dedicated_server_button">Dedicated Server</string>
    <string name="title_activity_dedicated_server">DedicatedServerActivity</string>
    <string name="dedicated_time_limit">%1$d minutes</string>
    <string name="dedicated_lives_limit">%1$d lives</string>
    <string name="dedicated_score_limit">%1$d points</string>
    <string name="dedicated_unlimited">Unlimited</string>
    <string name="dedicated_limit_separator">, </string>
    <string name="dedicated_game_running">Game Running</string>
    <string name="dedicated_game_waiting">Waiting to Start</string>
    <string name="dedicated_allow_join">Allow players to join after game has started?</string>
    <string name="dedicated_server_settings_only">Only allow server settings?</string>
    <string name="gps_mode_disabled">GPS Off</string>
    <string name="gps_mode_teammate">GPS Teammates Only</string>
    <string name="gps_mode_all">GPS All On</string>
    <string name="player_name_not_connected">{Not Connected}</string>
    <string name="scoreboard_button">Scoreboard</string>

    <string name="player_list_position">%d</string>
    <string name="player_list_id_label">ID</string>
    <string name="player_list_name_label">Name</string>
    <string name="player_list_points_label">Score</string>
    <string name="player_list_eliminated_label">Eliminated</string>
    <string name="player_list_team2_total">Team Totals &#8212; One:%1$d  Two:%2$d</string>
    <string name="player_list_team4_total">Team Totals &#8212; One:%1$d  Two:%2$d  Three:%3$d  Four:%4$d</string>

    <string name="player_settings_title">Player Settings</string>
    <string name="player_settings_id_title">Player Settings (%1$d)</string>
    <string name="player_settings_team_title">Player Settings (%1$d-%2$d)</string>
    <string name="player_settings_button">Player Settings</string>
    <string name="player_settings_health_title">Health</string>
    <string name="player_settings_spawn_time">Respawn Time (Seconds)</string>
    <string name="player_settings_reload_time">Reload Time (Milliseconds)</string>
    <string name="player_settings_reload_shots">Shots Per Reload</string>
    <string name="player_settings_reload_on_empty">Reload on empty?</string>
    <string name="player_settings_damage">Damage Per Hit To Others (Network Game Only)</string>
    <string name="player_settings_override_lives">Override lives limit?</string>
    <string name="player_settings_lives">Lives</string>
    <string name="player_settings_reset">Reset Defaults</string>
    <string name="player_settings_apply_to_all">Apply to all players?</string>
    <string name="player_settings_allow_player_settings">Allow players to set their own settings?</string>
    <string name="player_settings_not_allowed_toast">Players are not allowed to change player settings on this server.</string>
    <string name="player_settings_shot_modes_allowed">Shot Modes Allowed</string>
    <string name="player_settings_shot_mode_error">Must allow at least one shot mode!</string>
    <string name="vibrate_phone_switch">Vibrate Phone</string>


</resources>
